; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_rtclock.c_machine_delay_until.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_rtclock.c_machine_delay_until.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @machine_delay_until(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  br label %6

6:                                                ; preds = %8, %2
  %7 = call i64 (...) @mach_absolute_time()
  store i64 %7, i64* %5, align 8
  br label %8

8:                                                ; preds = %6
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %6, label %12

12:                                               ; preds = %8
  ret void
}

declare dso_local i64 @mach_absolute_time(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
